--- a/HTML/ex22/fundo004.html
+++ b/HTML/ex22/fundo004.html
@@ -8,6 +8,7 @@
         body{
             height: 98vh;
             background-image: url('imagens/wallpaper003.jpg');
+            background-position: ;
         }
     </style>
 </head>
