--- a/HTML/ex22/fundo005.html
+++ b/HTML/ex22/fundo005.html
@@ -8,10 +8,17 @@
         body{
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
-            background-size: contain 
+            background-size: cover; 
+            background-attachment: fixed;
         }
+        
+        /*shorthand - background
+        >>>>>> color image position repeat (size) attachment
+        >>>>>> black url('imagens/wallpaper002.jpg') center center no-repeat (cover) fixed
+        o "size/cover estão entre parenteses pq ate o momento desse estudo não estavam funcionando na shorthand DEVE SER COLOCADO DE FORMA SEPARADA"
+        */
 
         main{
             background-color: white;
@@ -26,7 +33,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempora fugit perferendis fuga et facilis, laborum, perspiciatis tenetur earum, vero maxime. Neque beatae sapiente facere dicta expedita fugiat, culpa rem!Loremlorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ratione aliquid magni necessitatibus, voluptatem placeat aliquam quia asperiores, numquam sint nulla itaque quas vero cumque. Harum impedit recusandae incidunt libero. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, ipsum temporibus atque voluptas explicabo impedit numquam aut dolorum aspernatur iure animi sapiente tempora dolore earum? Eaque illum voluptatum ea officia.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempora fugit perferendis fuga et facilis, laborum, perspiciatis tenetur earum, vero maxime. Neque beatae sapiente facere dicta expedita fugiat, culpa rem!Loremlorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ratione aliquid magni necessitatibus, voluptatem placeat aliquam quia asperiores, numquam sint nulla itaque quas vero cumque. Harum impedit recusandae incidunt libero. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, ipsum temporibus atque voluptas explicabo impedit numquam aut dolorum aspernatur iure animi sapiente tempora dolore earum? Eaque illum voluptatum ea officia.Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempora fugit perferendis fuga et facilis, laborum, perspiciatis tenetur earum, vero maxime. Neque beatae sapiente facere dicta expedita fugiat, culpa rem!Loremlorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ratione aliquid magni necessitatibus, voluptatem placeat aliquam quia asperiores, numquam sint nulla itaque quas vero cumque. Harum impedit recusandae incidunt libero. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, ipsum temporibus atque voluptas explicabo impedit numquam aut dolorum aspernatur iure animi sapiente tempora dolore earum? Eaque illum voluptatum ea officia.Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempora fugit perferendis fuga et facilis, laborum, perspiciatis tenetur earum, vero maxime. Neque beatae sapiente facere dicta expedita fugiat, culpa rem!Loremlorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ratione aliquid magni necessitatibus, voluptatem placeat aliquam quia asperiores, numquam sint nulla itaque quas vero cumque. Harum impedit recusandae incidunt libero. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, ipsum temporibus atque voluptas explicabo impedit numquam aut dolorum aspernatur iure animi sapiente tempora dolore earum? Eaque illum voluptatum ea officia.Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempora fugit perferendis fuga et facilis, laborum, perspiciatis tenetur earum, vero maxime. Neque beatae sapiente facere dicta expedita fugiat, culpa rem!Loremlorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ratione aliquid magni necessitatibus, voluptatem placeat aliquam quia asperiores, numquaLorem ipsum dolor sit amet consectetur adipisicing elit. Error tempora fugit perferendis fuga et facilis, laborum, perspiciatis tenetur earum, vero maxime. Neque beatae sapiente facere dicta expedita fugiat, culpa rem!Loremlorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ratione aliquid magni necessitatibus, voluptatem placeat aliquam quia asperiores, numquam sint nulla itaque quas vero cumque. Harum impedit recusandae incidunt libero. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, ipsum temporibus atque voluptas explicabo impedit numquam aut dolorum aspernatur iure animi sapiente tempora dolore earum? Eaque illum voluptatum ea officia.Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempora fugit perferendis fuga et facilis, laborum, perspiciatis tenetur earum, vero maxime. Neque beatae sapiente facere dicta expedita fugiat, culpa rem!Loremlorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod ratione aliquid magni necessitatibus, voluptatem placeat aliquam quia asperiores, numquam sint nulla itaque quas vero cumque. Harum impedit recusandae incidunt libero. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, ipsum temporibus atque voluptas explicabo impedit numquam aut dolorum aspernatur iure animi sapiente tempora dolore earum? Eaque illum voluptatum ea officia.m sint nulla itaque quas vero cumque. Harum impedit recusandae incidunt libero. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, ipsum temporibus atque voluptas explicabo impedit numquam aut dolorum aspernatur iure animi sapiente tempora dolore earum? Eaque illum voluptatum ea officia.</p>
     </main>
     
 </body>
